# esp_simd

./: CMakeLists.txt  LICENSE  README.md  disasm.S  disasm.txt  sdkconfig
OneDrive/Desktop/esp_simd/vector/: CMakeLists.txt  vector.c  vector.h
OneDrive/Desktop/esp_simd/vector/scalar_functions/: scalar_functions.h
OneDrive/Desktop/esp_simd/vector/testcases/: CMakeLists.txt  vector_test.h  vector_test_i8.h
OneDrive/Desktop/esp_simd/vector/vector_functions/: TODO.txt  vector_functions.h
components/esp_simd/: CMakeLists.txt  README.md
components/esp_simd/examples/: 00_initializing_vectors.c  01_acessing_elements.c  02_calulating_sd.c
components/esp_simd/include/: vector.h
components/esp_simd/include/vector/: vector_basic_functions.h  vector_extra_functions.h
components/esp_simd/src/vector/: simd_functions.h  vector.c  vector_basic_functions.c  vector_bitwise_functions.c  vector_compare_functions.c  vector_extra_functions.c
components/esp_simd/src/vector/vector_f32/: CMakeLists.txt  simd_add_scalar_f32.S  simd_dotp_f32.S  simd_floor_f32.S  simd_mac_f32.S  simd_min_f32.S  simd_mul_scalar_f32.S  simd_mul_shift_f32.S  simd_sub_f32.S  simd_sum_f32.S
components/esp_simd/src/vector/vector_i16/: simd_abs_i16.S  simd_add_i16.S  simd_and_i16.S  simd_compare_eq_i16.S  simd_compare_lt_i16.S  simd_copy_i16.S  simd_dotp_i16.S  simd_floor_i16.S  simd_mul_i16_to_i32.S  simd_mul_scalar_i16.S  simd_mul_shift_i16.S  simd_or_i16.S  simd_sub_i16.S  simd_sum_i16.S  simd_xor_i16.S
components/esp_simd/src/vector/vector_i32/: simd_add_scalar_i32.S  simd_ceil_i32.S  simd_compare_eq_i32.S  (+12 more)
components/esp_simd/test/: scalar_basic_functions.h  vector_basic_test.c  vector_bitwise_test.c  vector_bitwise_test.h  vector_test_helper.c
(+120 files in other folders)
